syntax = "proto3";

package chord_protos;

service NodeService {
  rpc GetSuccessorList(GetSuccessorListRequest) returns (GetSuccessorListReply);
  rpc Lookup(LookupRequest) returns (LookupReply);

  // This procedure is similar to find_predecessor in the Chord paper, but it directly returns the successor on the final step.
  rpc FindSuccessor(FindSuccessorRequest) returns (FindSuccessorReply);
  rpc GetPredecessor(GetPredecessorRequest) returns (GetPredecessorReply);
  rpc Notify(NotifyRequest) returns (NotifyReply);
  rpc UpdateFingerTable(UpdateFingerTableRequest) returns (UpdateFingerTableReply);
  // Notifies the successor that its predecessor has left the network
  rpc PredecessorLeave(PredecessorLeaveRequest) returns (PredecessorLeaveReply);

  /*
    Note: this isn't strictly necessary because of stabilization, but perhaps we implement it later for efficiency.

    // Notifies the predecessor that its successor has left the network
    rpc SuccessorLeave(SuccessorLeaveRequest) returns (SuccessorLeaveReply);
   */
}

message NodeInfo {
  bytes id = 1;
  string address = 2;
}

message GetSuccessorListRequest {
}

message GetSuccessorListReply {
  repeated NodeInfo nodes = 1;
}

message LookupRequest {
  bytes keyId = 1;
}

message LookupReply {
  NodeInfo node = 1;
}

message FindSuccessorRequest {
  bytes keyId = 1;
}

message FindSuccessorReply {
  bool found = 1;
  NodeInfo node = 2; // Either responds with the successor or a preceding finger table entry
}

message GetPredecessorRequest {
}

message GetPredecessorReply {
  optional NodeInfo node = 1;
}

message NotifyRequest {
  NodeInfo node = 1;
}

message NotifyReply {
}

message UpdateFingerTableRequest {
  NodeInfo node = 1;
  int32 index = 2;
}

message UpdateFingerTableReply {
}

message PredecessorLeaveRequest {
  NodeInfo node = 1;
  optional bytes newPredecessor = 2;
}

message PredecessorLeaveReply {
}

//message  SuccessorLeaveRequest {
//}
//
//message SuccessorLeaveReply {
//}